# book-rec

./: README.md  app.py  constraints-txt.txt  hello.py  override.sh  pyproject.toml
.streamlit/: config.toml
data/clean/: keyword_data.csv  unique_keywords.csv
data/scripts/: create_db.sql
notebooks/: analysis_building_permits.ipynb  clean_books.ipynb  cleaning_building_permits.ipynb  cleaning_real_estate.ipynb  clustering_recommendation.ipynb  drawSQL-mysql-export-2025-03-10.sql  exploring_building_permits.ipynb  firm_name_cleaner.py  functions.py  hypothesis_building_permits.ipynb  scrape_goodreads.ipynb  seeding_building_permits.ipynb  usage_example.ipynb
