[project]
name = "data-bootcamp-final-project"
version = "0.1.0"
description = "DAFT Jan 2025 Module 3 Final Project - End to End Data Analytics Project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "scipy>=1.13.1",
    "statsmodels>=0.14.4",
    "spacy[apple]>=3.8.4",
    "thefuzz>=0.22.1",
    "python-levenshtein>=0.27.1",
    "tqdm>=4.67.1",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.38",
    "dotenv>=0.9.9",
]
