[project]
name = "book-rec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "scipy>=1.13.1",
    "statsmodels>=0.14.4",
    # Use en_core_web_sm model directly instead of spacy with extras
    "spacy-legacy>=3.0.12",
    "spacy-model-en_core_web_sm==3.8.0",
    # Explicitly pin thinc version
    "thinc==8.1.10",
    "thefuzz>=0.22.1",
    "python-levenshtein>=0.27.1",
    "tqdm>=4.67.1",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.38",
    "dotenv>=0.9.9",
    "cryptography>=44.0.2",
    "scikit-learn>=1.6",
    "plotly>=6.0.1",
    "kneed>=0.8.5",
    "streamlit>=1.43.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"